--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "install": "^0.13.0",
     "npm": "^7.11.2",
     "react": "^17.0.2",
+    "react-bulma-components": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
