--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bulma-components": "^4.0.3",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
