--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ master ]
 env:
-  IMAGE_NAME: frontend
+  IMAGE_NAME: adielson-frontend
 jobs:
   build:
     runs-on: ubuntu-latest
